style:Removed hover effect

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -400,10 +400,11 @@ body.menu-open {
 .card{  
   background:linear-gradient(to right, #033d58, #0b2c4b, #01090c);
 }
-.card:hover {
-  transform: scale(1.05);
-  transition: transform 0.3s ease;
+.card-img-top:hover {
+  transform: scale(1.2);
+  transition: transform 0.6s ease;
 }
+
 
 /* Testimonials */
 .testo-card {
@@ -444,8 +445,9 @@ body.menu-open {
   cursor: pointer;
 }
 
-.card-img:hover img.object-cover {
+.card-img:hover  {
   transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
 
 .fw-bold {
